--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     </main>
     <footer>
         <div class="container">
-            <p>Copyright 2020, Your Name</p>
+            <p>Copyright 2023, Ryan Cooper</p>
         </div>
     </footer>
 </body>
