--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <section class="overview-hero">
             <div class="container">
                 <div class="overview-hero-image">
-                    <img src="#" alt="">
+                    <img src="./img/undraw_mindfulness_8gqa.svg" alt="Image of lady doing yoga">
                 </div>
                 <div class="overview-hero-text">
                     <h2>Live your healthiest life now!</h2>
