--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <h2>Learn About</h2>
                 <div class="cards">
                     <div class="card">
-                        <img src="#" alt="">
+                        <img src="./img/undraw_artificial_intelligence_re_enpp.svg" alt="Image of lady with robot">
                         <div class="card-body">
                             <h3>Artificial Intelligence</h3>
                             <p>Learn how our innovations in machine learning are making a positive impact on healthcare.
@@ -50,7 +50,8 @@
                         </div>
                     </div>
                     <div class="card">
-                        <img src="#" alt="">
+                        <img src="./img/undraw_fitness_tracker_3033.svg"
+                            alt="Image of lady running and a phone timing it">
                         <div class="card-body">
                             <h3>Fitness+ Tracker</h3>
                             <p>Fitness+ is our new, engaging and personalized fitness tracking app experience designed
@@ -58,7 +59,7 @@
                         </div>
                     </div>
                     <div class="card">
-                        <img src="#" alt="">
+                        <img src="./img/undraw_healthy_lifestyle_re_ifwg.svg" alt="Image of a man eating an apple">
                         <div class="card-body">
                             <h3>Healthy Lifestyle</h3>
                             <p>Being healthy should be part of your overall lifestyle. Living a healthy lifestyle can
