Add Doctor image in recent stories

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <div class="container">
                 <h2>Recent Stories</h2>
                 <article>
-                    <img src="" alt="">
+                    <img src="./img/usman-yousaf-pTrhfmj2jDA-unsplash.jpg" alt="Image of a doctor">
                     <div class="article-body">
                         <h3>Dr. Christopher Turk has spent his entire career caring for people’s health and wellbeing.
                         </h3>
