--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     </div>
                 </article>
                 <article>
-                    <img src="" alt="">
+                    <img src="./img/lucas-vasques-9vnACvX2748-unsplash.jpg" alt="Image showing a laboratory test">
                     <div class="article-body">
                         <h3>INFO2180 Labs collaborates with the Ministry of Health and Ministry of Education on COVID-19
                             Risk Screening and Testing</h3>
